//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  accountId String [pk]
  email String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  avatarUrl String [not null]
  avatarFileName String [not null]
  role String [not null]
  phone String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  vechicles Vechicle [not null]
}

Table TemperatureSensor {
  recordId String [pk]
  unit String [not null]
  timestamp DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  temperature String [not null]
}

Table LightSensor {
  recordId String [pk]
  unit String [not null]
  timestamp DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  lux String [not null]
}

Table FanDevice {
  recordId String [pk]
  timestamp DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status String [not null]
}

Table Vechicle {
  RFID String [pk]
  timestamp DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  ownerId String [not null]
  logs Logs [not null]
}

Table ParkingLot {
  parkingSlotId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status String [not null]
  pricePerHour String [not null]
  logs Logs [not null]
}

Table Logs {
  logId String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  timeIn DateTime [not null]
  timeOut DateTime [not null]
  price String [not null]
  vechicle Vechicle [not null]
  RFID String [not null]
  parkingLot ParkingLot [not null]
  parkingSlotId String [not null]
}

Ref: Vechicle.ownerId > User.accountId

Ref: Logs.RFID > Vechicle.RFID

Ref: Logs.parkingSlotId > ParkingLot.parkingSlotId